--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,12 @@
     <string name="ob_second_secondary_text">Три минуты вернут тебя\nв потоковое состояние</string>
     <string name="ob_third_main_text">Позволь удивительным\nпеременам войти\nв твою жизнь</string>
     <string name="ob_third_secondary_text">Сделай правильный выбор,\nначни использовать приложение\nуже сейчас!</string>
+    <string name="txt_login">Логин</string>
+
+    <string name="txt_faq">FAQ</string>
+    <string name="txt_help">Помощь</string>
+    <string name="txt_change_language">Сменить язык</string>
+    <string name="txt_add_promocode">Ввести промо-код</string>
+    <string name="txt_notify_meditation">Напоминать о медитации</string>
+    <string name="txt_level">Твой уровень</string>
 </resources>
