Profile view already set and need to refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="txt_fav_meditations">Мои любимые медитации</string>
     <string name="unblock_opportunities">Разблокируй безграничные возможности себя и приложения</string>
     <string name="txt_buy_subscription">Купить подписку</string>
+    <string name="mentalmind_kz">mentalmind.kz</string>
 </resources>
