Levels list added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="unblock_opportunities">Разблокируй безграничные возможности себя и приложения</string>
     <string name="txt_buy_subscription">Купить подписку</string>
     <string name="mentalmind_kz">mentalmind.kz</string>
+    <string name="levels_description">Описание уровней</string>
 </resources>
