--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="favorite">Любимое</string>
     <string name="what_do_you_feel">Какой ты сейчас</string>
     <string name="will_be_available_later">Функционал будет доступен позже</string>
+    <string name="minute">мин.</string>
 </resources>
