--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,12 +42,12 @@
     <string name="main">Главная</string>
 
     //OnBoardingText
-    <string name="ob_first_main_text">Освободи свой мозг\nот всех ограничений</string>
-    <string name="ob_first_secondary_text">С помощью простых и\nуникальных инструментов</string>
-    <string name="ob_second_main_text">Ежедневная проработка\nкаждый день</string>
-    <string name="ob_second_secondary_text">Три минуты вернут тебя\nв потоковое состояние</string>
-    <string name="ob_third_main_text">Позволь удивительным\nпеременам войти\nв твою жизнь</string>
-    <string name="ob_third_secondary_text">Сделай правильный выбор,\nначни использовать приложение\nуже сейчас!</string>
+    <string name="ob_first_main_text">Освободи свой мозг от всех ограничений</string>
+    <string name="ob_first_secondary_text">С помощью простых и уникальных инструментов</string>
+    <string name="ob_second_main_text">Ежедневная проработка каждый день</string>
+    <string name="ob_second_secondary_text">Три минуты вернут тебя в потоковое состояние</string>
+    <string name="ob_third_main_text">Позволь удивительным\nпеременам войти в твою жизнь</string>
+    <string name="ob_third_secondary_text">Сделай правильный выбор, начни использовать приложение\nуже сейчас!</string>
     <string name="txt_login">Логин</string>
 
     <string name="txt_faq">FAQ</string>
@@ -104,4 +104,5 @@
     <string name="kazakh_language">Казахский язык</string>
     <string name="female">Женский</string>
     <string name="male">Мужской</string>
+    <string name="show_history_by_day">посмотреть по дням</string>
 </resources>
