--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,7 @@
     <string name="try_now">Попробовать</string>
     <string name="privacy_policy"><u>Политика конфеденциальности</u></string>
     <string name="unblock_title">Разблокируй безграничные возможности себя и приложения Mentalmind</string>
+    <string name="google_token">712578955819-3j2aj54vslg4mfvjoqu7jd5cc2ai43u9.apps.googleusercontent.com</string>
+    <string name="facebook_app_id">3564330413611439</string>
+    <string name="fb_login_protocol_scheme">fb3564330413611439</string>
 </resources>
