--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,5 @@
     <string name="pusher_beam_interest_kz">COMMON_KZ</string>
     <string name="pusher_beam_interest_en">COMMON_EN</string>
     <string name="empty_history">История пуста</string>
+    <string name="rate_meditation">Оцените медитацию</string>
 </resources>
