all last fixes. fix favorite meditations fix registration flow fix google authentication fix challenges fix courses fix instruments fix playlist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="reply_your_password">Повторите свой пароль</string>
     <string name="reply_password">Повторите пароль</string>
     <string name="enter_your_password">Введите свой пароль</string>
-    <string name="enter_promocode">Введите промкод</string>
+    <string name="enter_promocode">Введите промокод</string>
     <string name="password">Пароль</string>
     <string name="create_new_pass">Придумайте новый пароль</string>
     <string name="reply_new_pass">Повторите новый пароль</string>
